--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 
 #프록시 단계에서의 로그
 logging.level.org.springframework.transaction.interceptor=TRACE
+
+logging.level.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
+
+#JPA log 커밋 ,롤백 확인
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+logging.level.org.hibernate.resource.transaction=DEBUG
+
+#JPA SQL
+logging.level.org.hibernate.SQL=DEBUG
